bk_ida/gccida/c3/const_double_operand
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/const_double_operand/src/recog.c:1640:36: error: must use 'enum' tag to refer to type 'machine_mode'
int  const_double_operand( rtx op, machine_mode mode) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/const_double_operand/src/recog.c:1647:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] != MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/const_double_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/const_double_operand/src/recog.c:1648:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[mode] != MODE_PARTIAL_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/const_double_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/const_double_operand/src/obj/recog.o] Error 1
